manifests/istio/gateway/customer-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: website-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway
  http:
  - route:
    - destination:
        host: customer
